# ragas-typhoon

./: .gitignore  README.md  knowledge_graph.json  pyproject.toml
chroma_db/cf7bb1a5-2128-4972-b867-7be7a1c8c0ba/: index_metadata.pickle
src/ragas_typhoon/: __init__.py  cleaner.py  evaluate.py  generator.py  model.py  rag.py  scratchpad.txt  settings.py  vectorstore.py
src/ragas_typhoon/tutorial/: eval.py  gen.py
