[project]
name = "ragas-typhoon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TanukiDong", email = "eurondelta@gmail.com" }
]
dependencies = [
    "ragas>=0.2.9",
    "langchain-community>=0.3.13",
    "unstructured[md]>=0.16.11",
    "sentence-transformers>=3.3.1",
    "langchain-huggingface>=0.1.2",
    "torch>=2.5.1",
    "faiss-gpu>=1.7.2",
    "chromadb>=0.5.23",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ragas_typhoon"]
